// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/helmfile/extract extractPackageFile() parses multidoc yaml 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "depName": "manifests",
      "skipReason": "local-chart",
    },
    Object {
      "currentValue": "7.4.3",
      "depName": "rabbitmq",
      "registryUrls": Array [
        "https://charts.bitnami.com/bitnami",
      ],
    },
    Object {
      "currentValue": "13.7",
      "depName": "kube-prometheus-stack",
      "registryUrls": Array [
        "https://prometheus-community.github.io/helm-charts",
      ],
    },
    Object {
      "depName": "invalid",
      "skipReason": "invalid-name",
    },
    Object {
      "depName": "external-dns",
      "skipReason": "invalid-version",
    },
  ],
}
`;

exports[`modules/manager/helmfile/extract extractPackageFile() skip chart that does not have specified version 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "depName": "example",
      "skipReason": "invalid-version",
    },
  ],
}
`;

exports[`modules/manager/helmfile/extract extractPackageFile() skip chart with special character in the name 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": "1.0.0",
      "depName": "example/example",
      "registryUrls": Array [
        "https://kiwigrid.github.io",
      ],
      "skipReason": "unsupported-chart-type",
    },
    Object {
      "currentValue": "1.0.0",
      "depName": "example?example",
      "registryUrls": Array [
        "https://kiwigrid.github.io",
      ],
      "skipReason": "unsupported-chart-type",
    },
  ],
}
`;

exports[`modules/manager/helmfile/extract extractPackageFile() skip chart with unknown repository 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": "1.0.0",
      "depName": "example",
      "registryUrls": Array [],
      "skipReason": "unknown-registry",
    },
  ],
}
`;

exports[`modules/manager/helmfile/extract extractPackageFile() skip if repository details are not specified 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": "1.0.0",
      "depName": "example",
      "registryUrls": Array [],
      "skipReason": "unknown-registry",
    },
  ],
}
`;

exports[`modules/manager/helmfile/extract extractPackageFile() skip local charts 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "depName": "example",
      "skipReason": "local-chart",
    },
  ],
}
`;

exports[`modules/manager/helmfile/extract extractPackageFile() skip templetized release with invalid characters 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": "1.0.0",
      "depName": "{{\`{{ .Release.Name }}\`}}",
      "registryUrls": Array [
        "https://charts.helm.sh/stable",
      ],
      "skipReason": "unsupported-chart-type",
    },
    Object {
      "currentValue": "1.0.0",
      "depName": "example",
      "registryUrls": Array [
        "https://charts.helm.sh/stable",
      ],
    },
  ],
}
`;
